--- a/demo.html
+++ b/demo.html
@@ -5,12 +5,36 @@
   <title>ibcarousel</title>
 
   <link rel="stylesheet" href="dest/ibcarousel.css">
+  <link rel="stylesheet" href="dest/ibcarousel-layout.css">
 </head>
 
 <body>
 
-  <div class="ibcarousel">
-    sdafa
+  <div class="ibcarousel col-1_4">
+    <div>
+      <p>Frame 1</p>
+    </div>
+    <div>
+      <p>Frame 2</p>
+    </div>
+    <div>
+      <p>Frame 3</p>
+    </div>
+    <div>
+      <p>Frame 4</p>
+    </div>
+    <div>
+      <p>Frame 5</p>
+    </div>
+    <div>
+      <p>Frame 6</p>
+    </div>
+    <div>
+      <p>Frame 7</p>
+    </div>
+    <div>
+      <p>Frame 8</p>
+    </div>
   </div>
 
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
