--- a/demo.html
+++ b/demo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>ibcarousel</title>
+  <title>ibCarousel</title>
 
   <link rel="stylesheet" href="dest/ibcarousel.css">
   <link rel="stylesheet" href="dest/ibcarousel-layout.css">
@@ -39,5 +39,11 @@
 
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
   <script src="src/ibcarousel.js"></script>
+  <script>
+  $(document).ready(function() {
+    $('.ibcarousel').ibcarousel();
+  });
+  </script>
+
 </body>
 </html>
